--- a/index.html
+++ b/index.html
@@ -5,10 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Module 4 Project</title>
 </head>
-<body>
-    <div class="container">
-        <div class="anchor"></div>
-    </div>
-    <script src="/src/app.js"></script>
+<body class="main-container ">
+    <header class="header-container ">
+        <div class="dropdown">
+            <button class="dropbtn">⋮</button>
+            <div class="dropdown-content">
+                
+
+            </div>
+        </div>
+        <h1>Donut Maker</h1>
+    </header>
+    <main class="content">
+
+
+        <div class="column1">
+            <div class=" text">
+                <h2 class="section-title">Donut Count:</h2>
+                <h2 class="donut-count">0</h2>
+            </div>
+            <button class="donut-button">
+            <img src="./src/css/images/individual-donut.PNG" alt="donut"></button>
+        </div>
+
+
+        <div class="column2">
+            <div class="auto-clickers text">
+                <h2 class="section-title">Auto Clickers:</h2>
+                <h2 class="auto-clicker-count">0</h2>
+                <button class="purchase auto-button">Purchase Auto Clicker</button>
+                <h3 class="auto-clicker-cost">Cost: 100 Donuts</h3>
+            </div>
+            <div class="multiplier text">
+                <h2 class="section-title">Multipliers:</h2>
+                <h2 class="multiplier-count">0</h2>
+                <button class="purchase multiplier-button">Purchase Multiplier</button>
+                <h3 class="multiplier-cost">Cost: 10 Donuts</h3>
+            </div>
+        </div>
+
+
+    </main>
+    
+</body>
 </body>
 </html>
