--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <title>Module 4 Project</title>
 </head>
 <body class="main-container ">
-    <header class="header-container ">
+    <header class="header">
         <div class="dropdown">
+            <a>Company Info</a>
+            <a>Developer Information</a>
+            <a class="inspiration" href="https://orteil.dashnet.org/cookieclicker/" target="_blank">Inspiration 
+                <p class="cookie">Click on the inspiration link to go to the website </p>
+            </a>
+
             <button class="dropbtn">⋮</button>
             <div class="dropdown-content">
                 
@@ -33,13 +39,13 @@
             <div class="auto-clickers text">
                 <h2 class="section-title">Auto Clickers:</h2>
                 <h2 class="auto-clicker-count">0</h2>
-                <button class="purchase auto-button">Purchase Auto Clicker</button>
+                <button class="buy auto-button">Buy Auto Clicker</button>
                 <h3 class="auto-clicker-cost">Cost: 100 Donuts</h3>
             </div>
             <div class="multiplier text">
                 <h2 class="section-title">Multipliers:</h2>
                 <h2 class="multiplier-count">0</h2>
-                <button class="purchase multiplier-button">Purchase Multiplier</button>
+                <button class="buy multiplier-button">Buy Multiplier</button>
                 <h3 class="multiplier-cost">Cost: 10 Donuts</h3>
             </div>
         </div>
