--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Module 4 Project</title>
 </head>
+
 <body class="main-container ">
     <header class="header">
         <div class="dropdown">
-            <a>Company Info</a>
+            <a class="company-info" href=CompanyInfo.html>Company Info</a>
             <a>Developer Information</a>
             <a class="inspiration" href="https://orteil.dashnet.org/cookieclicker/" target="_blank">Inspiration 
                 <p class="cookie">Click on the inspiration link to go to the website </p>
@@ -16,7 +18,7 @@
 
             <button class="dropbtn">⋮</button>
             <div class="dropdown-content">
-                
+
 
             </div>
         </div>
@@ -52,7 +54,8 @@
 
 
     </main>
-    
+
 </body>
 </body>
+
 </html>
