--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Module 4 Project</title>
+    <title>Donut Maker</title>
+    
+
 </head>
 
 <body class="main-container ">
@@ -12,7 +14,7 @@
         <div class="dropdown">
             <a class="company-info" href=CompanyInfo.html>Company Info</a>
             <a>Developer Information</a>
-            <a class="inspiration" href="https://orteil.dashnet.org/cookieclicker/" target="_blank">Inspiration 
+            <a class="inspiration" href="https://orteil.dashnet.org/cookieclicker/" target="_blank">Inspiration
                 <p class="cookie">Click on the inspiration link to go to the website </p>
             </a>
 
@@ -33,7 +35,7 @@
                 <h2 class="donut-count">0</h2>
             </div>
             <button class="donut-button">
-            <img src="./src/css/images/individual-donut.PNG" alt="donut"></button>
+                <img src="./src/css/images/individual-donut.PNG" alt="donut"></button>
         </div>
 
 
