donut button working

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donut Maker</title>
-    
+
 
 </head>
 
@@ -17,12 +17,6 @@
             <a class="inspiration" href="https://orteil.dashnet.org/cookieclicker/" target="_blank">Inspiration
                 <p class="cookie">Click on the inspiration link to go to the website </p>
             </a>
-
-            <button class="dropbtn">⋮</button>
-            <div class="dropdown-content">
-
-
-            </div>
         </div>
         <h1>Donut Maker</h1>
     </header>
@@ -34,8 +28,8 @@
                 <h2 class="section-title">Donut Count:</h2>
                 <h2 class="donut-count">0</h2>
             </div>
-            <button class="donut-button">
-                <img src="./src/css/images/individual-donut.PNG" alt="donut"></button>
+            <button class="donut-button">Donut Button
+            </button>
         </div>
 
 
@@ -56,6 +50,7 @@
 
 
     </main>
+    <script src="/src/js/app.js " type="module"></script>
 
 </body>
 </body>
