--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="auto-clickers text">
                 <h2 class="section-title">Auto Clickers:</h2>
                 <h2 class="auto-clicker-count">0</h2>
-                <button class="buy auto-button">Buy Auto Clicker</button>
+                <button class="buy-auto-button">Buy Auto Clicker</button>
                 <h3 class="auto-clicker-cost">Cost: 100 Donuts</h3>
             </div>
             <div class="multiplier text">
