finally making progress

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <button class="exit-button2">Close</button>
                 <h1>Contact Us</h1>
                 
-                <a href="https://www.jollypiratedonutsoh.com/">Jolly Pirate</a>
+                <a href="http://hooversailingclub.com/classes/">Tired of making donuts? Learn to Sail</a>
             </div>
         </div>
 
@@ -66,15 +66,15 @@
         <button class="purchase-auto-clicker-button">Buy Auto Clicker</button>
 
         <div class="auto-clicker-text">
-            <div class="auto-clicker-cost">Current Auto Clicker Cost: 100 Donuts</div>
-            <div class="auto-clicker-count">Clicker Total:0</div>
+            <div class="auto-clicker-cost">Auto Clicker Cost: 100 Donuts</div>
+            <div class="auto-clicker-count"></div>
         </div>
 
         <button class="purchase-donut-multiplier-button">Buy Donut Multiplier </button>
 
         <div class="donut-multiplier-text">
-            <div class="donut-multiplier-cost">Current Donut Multiplier Cost: 10 donuts</div>
-            <div class="donut-multiplier-count">Donut Multiplier Total:0</div>
+            <div class="donut-multiplier-cost">Donut Multiplier Cost: 10 donuts</div>
+            <div class="donut-multiplier-count"></div>
         </div>
 
         <button class="reset">
