Most likely passes. No AutoClicker

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <button class="purchase-donut-multiplier-button">Buy Donut Multiplier </button>
 
         <div class="donut-multiplier-text">
-            <div class="donut-multiplier-cost">Donut Multiplier Cost: 10 donuts</div>
+            <div class="donut-multiplier-cost">Donut Multiplier Cost: 10 Donuts</div>
             <div class="donut-multiplier-count"></div>
         </div>
 
