cant do any more work tonight

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="modal">
                 <button class="exit-button">Close</button>
                 <h1>Dave Alvarado</h1>
-                <p>Get At Me!</p>
+                <p>Please Feel Free to Contact me via LinkedIn. Additionally, please feel free to take a look at my portfolio.</p>
                
                 <a href="https://sailordave17.github.io/">My Portfolio</a>
                 <a href="https://www.linkedin.com/in/david-r-alvarado17">LinkedIn</a>
